API execution of Kalkinso service added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/bucAudio
 spring.datasource.username=root
 spring.datasource.password=qwerty
+
+
+#Kalkinso
+kalkinso.base.url=http://localhost/api/
