Integrated user registration with KalkinsoService

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,7 @@ spring.datasource.password=qwerty
 
 #Kalkinso
 kalkinso.base.url=http://localhost/api/
+kalkinso.email=username
+kalkinso.password=password
+kalkinso.org.id=orgId
+kalkinso.access.key=accessKey
